force-app/main/default/objects/Decision__c/Decision__c.object-meta.xml
<CustomObject>
    <description>Agile Accelerator customization. Track major decisions made for each story.</description>
    <label>Decision</label>
    <nameField>
        <displayFormat>D-{0000000}</displayFormat>
        <label>Decision Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Decisions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>