force-app/main/default/objects/Decision__c/fields/Policy_Decision__c.field-meta.xml
<CustomField>
    <fullName>Policy_Decision__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Policy Decision</label>
    <type>Checkbox</type>
</CustomField>