force-app/main/default/objects/Decision__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>In Review – Client</fullName>
            </value>
            <value>
                <fullName>In Review – UCI</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Deferred</fullName>
                <isActive>false</isActive>
                <label>Deferred</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>