force-app/main/default/objects/Decision__c/listViews/Decisions_In_Review_UCI.listView-meta.xml
<ListView>
    <fullName>Decisions_In_Review_UCI</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Due_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>In Review – UCI</value>
    </filters>
    <label>Decisions - In Review UCI</label>
</ListView>