force-app/main/default/objects/Decision__c/listViews/Open_Decisions.listView-meta.xml
<ListView>
    <fullName>Open_Decisions</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Due_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New,In Review – Client,In Review – UCI</value>
    </filters>
    <label>Open Decisions</label>
</ListView>